cluster/clusters/edge-01/proxy-service/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: proxy-service
  namespace: hm
  labels:
    app.kubernetes.io/name: proxy-service
    app.kubernetes.io/component: edge
spec:
  entryPoints:
    - websecure
  routes:
    - match: "HostSNI(`hackamonth.io`)"
      priority: 2000000
      services:
        - name: proxy-service
          port: 10443
  tls:
    passthrough: true
